api-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  labels:
    app: api-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api-service
          image: eu.gcr.io/teleport-274815/api-service:0.9.2
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: env
              mountPath: /usr/src/app/.env
              subPath: .env
            - name: secrets
              mountPath: /usr/src/app/.env.secrets
              subPath: .env.secrets
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /status
              port: 4000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /status
              port: 4000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
      volumes:
        - name: env
          configMap:
            name: api-service-configmap
            items:
              - key: env
                path: .env
        - name: secrets
          secret:
            secretName: api-service-secrets
            items:
              - key: env-secrets
                path: .env.secrets
      nodeSelector:
        cloud.google.com/gke-nodepool: regular-pool
