api-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    type: api-service
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4000
  selector:
    app: api-service
